--- a/assets/css/_commons.css
+++ b/assets/css/_commons.css
@@ -14,7 +14,7 @@ a, a:hover, a:focus, button:hover, button:focus{
 	outline: 0;
 }
 body {
-    background: #f8f8f8;
+    background: #fff;
     color: #4a4846;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
