--- a/assets/css/_typo.css
+++ b/assets/css/_typo.css
@@ -2,15 +2,14 @@
 All heading
 */
 h1,h2,h3,h4,h5,h6{
-	line-height: 1;	
+	line-height: 1;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 700;
 }
 h1{
 	font-size: 36px;
 }
 h2{
-	font-size: 31.5px;
-}
-h3{
 	font-size: 29px;
 }
 h4{
