--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,5 @@
 @import url('_home.css');
 @import url('_contact.css');
 @import url('_footer.css');
-
-
-
+@import url('_product-page.css');
+@import url('_category-page.css');
