--- a/assets/css/_header.css
+++ b/assets/css/_header.css
@@ -3,18 +3,19 @@ header{
 	border-top: 4px solid #4a4846;
     margin-bottom: ;
 }
-.header-top{
-    padding: ;
+.header-top{ 
+    padding: ; 
 }
 .header-left{
     float: left;
     width: 35%;
     padding-top: 14px;
 }
-.hdr-rgt{
+.header-right {
     float: right;
     width: 65%;
     padding-right: 8px;
+    padding-left: 10px;
 }
 .header-logo a{
     max-width:447px;
@@ -108,61 +109,6 @@ nav.main-nav > ul > li.current-menu-item > a,
 nav.main-nav > ul > li > a:hover{
     color:#0e72b5;
 }
-
-header.banner-header  nav.main-nav ul li a{
-    /*color: #fff;*/
-}
-
-
-/*------responsive menu---------*/
-
-.mmenu-opener{
-    height: 20px;
-    width: 24px;
-    position: relative;
-    float: right;
-    display: none;
-    overflow: hidden;
-}
-.mmenu-opener span{
-    height: 2px;
-    width: 100%;
-    position: absolute;
-    color: #002955;
-    background: #002955;
-    transition: all 0.3s;
-}
-.mmenu-opener span:first-child{
-    top: 0;
-    left: 0;
-    right: 0;
-}
-.mmenu-opener span:nth-child(2){
-    top: 7px;
-    left: 0;
-    right: 0;
-}
-.mmenu-opener span:nth-child(3){
-    top: 14px;
-    left: 0;
-    right: 0;
-}
-.mmenu-opener.thisopened span:first-child {
-    transform: rotate(-45deg);
-    top: 9px;
-}
-.mmenu-opener.thisopened span:nth-child(2){
-    left: -100%;
-}
-.mmenu-opener.thisopened span:nth-child(3) {
-    transform: rotate(45deg);
-    top: 9px;
-}
-.mmenu-opener.main-nav-opener{
-    display: none;
-}
-
-
 .hdr-btm-links{
 	background: #eeeeee;
 }
@@ -189,37 +135,74 @@ header.banner-header  nav.main-nav ul li a{
 .hdr-btm-bq{
 	background: #4a4846;
 }
-.hdr-btm-bq-innr{
-	padding-bottom: 4px;	
+.hdr-breadcrumbs{
+    padding: 3px 10px 5px;
 }
-.hdr-btm-bq a {
-	display: inline-block;
-	vertical-align: baseline;
-	padding-right:10px;
-	position: relative;
-	font-weight: 400;
-	color: #fff; 
-	font-size: 10px;
-	line-height: 12px;
+.hdr-breadcrumbs ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
-.hdr-btm-bq a:hover {
-	color: #0e72b5;
+.hdr-breadcrumbs ul:after,
+.hdr-breadcrumbs ul:before{
+    content: "";
+    display: table;
+    clear: both;
 }
-.hdr-btm-bq a:after {
-	content: '>';
-	position: absolute;
-	right: 0;
-	top: 0;
-	-ms-transition: all .3s ease;
-	-webkit-transition: all .3s ease;
-	transition: all .3s ease;
+.hdr-breadcrumbs ul li{
+    padding: 0 13px;
+    position: relative;
+    float: left;
 }
-.hdr-btm-bq a:hover:after {
-	right: -5px;
+.hdr-breadcrumbs ul li a {
+    display: block;
+    position: relative;
+    font-weight: 400;
+    color: #fff; 
+    font-size: 10px;
+    line-height: 12px;
+    text-transform: lowercase;
 }
-
-
-
+.hdr-breadcrumbs ul li a:hover{
+    color: #0e72b5;
+}
+.hdr-breadcrumbs ul li:first-child{
+    padding-left: 0;
+}
+.hdr-breadcrumbs ul li::after {
+    content: '>';
+    position: absolute;
+    right: 0;
+    bottom: -7px;
+    color: #fff;
+    font-size: 10px;
+}
+.hdr-breadcrumbs ul li:last-child:after{
+    content: none;
+}
+.hdr-breadcrumbs ul li:only-child:after{
+    content: '>'!important;
+}
+span.notification-cls{
+    position: absolute;
+    top: -5px;
+    right: -7px;
+    left: auto;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 8.37px;
+    color: #fff;
+    background: #58b028;
+    padding: 1px 3px 2px;
+    line-height: 9px;
+    display: inline-block;
+}
+.md-popup-main-menu-wrap span.notification-cls{
+    top: -2px;
+    right: -27px;
+    font-size: 21.31px;
+    padding: 7px 5px 8px;
+}
 
 
 
@@ -245,7 +228,6 @@ nav.main-nav li.menu-item-has-children > ul.sub-menu {
     opacity: 0;
     margin-top: 0;
 }
-
 nav.main-nav li.menu-item-has-children:hover > ul.sub-menu {
     visibility: visible;
     opacity: 1;
@@ -257,13 +239,11 @@ nav.main-nav li.menu-item-has-children:hover > ul.sub-menu {
     -ms-transition-delay: 0s, 0s, 0.3s;
     transition-delay: 0s, 0s, 0.3s;
 }
-
 nav.main-nav ul li.menu-item-has-children ul li a{
     display: block;
     color: inherit;
     padding: 5px 0;
 }
-
 nav.main-nav ul li.menu-item-has-children ul{
     padding: 10px 15px;
 }
@@ -299,6 +279,226 @@ nav.main-nav li.menu-item-has-children ul.sub-menu a:hover{
 nav.main-nav ul li.menu-item-has-children ul li:last-child{
     margin-bottom: 0;
 }
+.md-popup-main-menu-wrap{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(max-width: 991px){
+    header {
+        border-top:0;
+    }
+    .header-left {
+        width: 100%;
+        padding: 22px 0 22px;
+        text-align: center;
+    }
+    .header-right {
+        width: 100%;
+        background: #eeeeee;
+        padding-right: 0;
+        padding-left: 0;
+        position: relative;
+    }
+    .header-right:before{
+        content: '';
+        background: #eee;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: -15px;
+        right: -15px;
+        z-index: -1;
+    }
+    .header-right {
+        width: 100%;
+        background: #eeeeee;
+        padding-right: 0;
+        padding-left: 0;
+        position: relative;
+    }
+
+    .hdr-rgt-md-addr li{
+        float: left;
+        margin-right: 14px;
+    }
+    .hdr-rgt-md-addr li a{
+       display: inline-block;
+       vertical-align: baseline;
+       text-align: center;
+       width: 50px;
+       height: 40px;
+       padding: 5px;
+       line-height: ;
+       background: #0e72b5;
+    }
+
+
+    
+/*------- md menu -------*/
+    .md-popup-main-menu-wrap{
+        color: #fff;
+        padding: 70px 65px 50px;
+        display: none;
+        overflow-y: scroll;
+        position: fixed;
+        z-index: 100;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: #0e72b5;
+        width: 100%;
+        opacity: .95;
+    }
+    .md-nav-bar-controller{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background: #fff;
+        z-index: 23;
+    }
+    .home-bnr-md-nav-bar-controller {
+        position: absolute;
+        right: 30px;
+        top: 0;
+        z-index: 5;
+        color: #fff;
+        bottom: 0;
+        right: 0;
+        background: #0e72b5;
+        min-width: 110px;
+        text-align: center;
+        padding: 5px 5px;
+        cursor: pointer;
+    }
+    .md-menu-btn-bar a{
+        float: left;
+        max-width: 50px;
+    }
+    .md-menu-btn-bar a img{
+        width: 100%;
+    }
+    .md-menu-humberger-btn strong {
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        font-size: 27px;
+        display: inline-block;
+        vertical-align: middle;
+        text-transform: uppercase;
+        color: #fff;
+    }
+    .md-popup-main-nav ul {
+        list-style: none;
+        padding: 0;
+        text-align: left;
+        font-weight: 500;
+        color: #fff;
+        line-height: 100%;
+        font-size: 17px;
+        margin: 0;
+        padding-left: 18px;
+        text-align: right;
+    }
+    .md-popup-main-nav ul a {
+        color: #fff;
+        position: relative;
+        font-size: 40px;
+        text-transform: uppercase;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        line-height: 45px;
+    }
+    .md-popup-main-nav > ul > li{
+        padding-bottom: 52px;
+    }
+    .md-popup-main-nav ul.sub-menu{
+        padding-top: 15px;
+        padding-left: 0;
+    }
+    .md-popup-main-nav ul.sub-menu li{
+        text-transform: uppercase;
+        padding-bottom: 15px;
+        font-weight: 500;
+    }
+    .md-popup-main-nav ul.sub-menu li a{
+        color: #fff;
+        font-size: 27px;
+        line-height: 31px;
+        display: inline-block;
+        vertical-align: baseline;
+    }
+    .md-popup-main-nav ul.sub-menu li:last-child{
+        padding-bottom: 0;
+    }
+    .md-menu-popup-close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+    }
+    .md-menu-popup-close-btn span {
+        font-family: 'Roboto', sans-serif;
+        font-size: 31px;
+        font-weight: 900;
+        color: #fff;
+        display: inline-block;
+        vertical-align: baseline;
+        cursor: pointer;
+    }
+
+}
+
+@media(max-width: 767px){
+
+}
+
+@media(max-width: 575px){
+    .md-popup-main-nav ul a {
+        font-size: 35px;
+        line-height: 40px;
+    }
+    .md-popup-main-nav > ul > li {
+        padding-bottom: 35px;
+    }
+    .md-popup-main-nav ul.sub-menu li a {
+        font-size: 23px;
+        line-height: 27px;
+    }
+    .md-popup-main-menu-wrap {
+        padding: 70px 40px 50px 20px;
+    }
+    .md-popup-main-menu-wrap span.notification-cls {
+        top: -12px;
+        right: -20px;
+        font-size: 18px;
+    }
+}
+
+@media(max-width: 479px){
+
+}
+
+@media(max-width: 359px){
+    .hdr-rgt-md-addr li {
+        float: left;
+        margin-right: 9px;
+    }
+}
+
+
 
 
 
